* Added .htaccess for Cache control * Added performance script for dev mode * Added quick project button on top of the slug page * Updated solarsystem page * Fixed projectsVisible variable calculation

--- a/assets/less/_components/btn.less
+++ b/assets/less/_components/btn.less
@@ -18,8 +18,14 @@
   }
 
   // Active
-  &.active,
-  &.nuxt-link-active {
+  &:is(.active, .nuxt-link-active) {
+    color: var(--site-contrast);
+  }
+}
+
+// Overwrite hover for button-links
+a.btn {
+  &:is(:hover, :focus) {
     color: var(--site-contrast);
   }
 }
@@ -31,8 +37,7 @@
   background-color: transparent;
 
   // Active
-  &.active,
-  &.nuxt-link-active {
+  &:is(.active, .nuxt-link-active) {
     color: var(--site-contrast);
     background-color: var(--site-color);
   }
